Fix leak of AudioDeviceID array due to an early return in AudioDeviceMac::GetNumberDevices() <https://webkit.org/b/186152> <rdar://problem/40692824>

Reviewed by Alex Christensen.

* Source/webrtc/modules/audio_device/mac/audio_device_mac.cc:
Use std::make_unique<> so that memory is allocated and
deallocated automatically.  Remove manual calls to free().
* WebKit/0011-Fix-AudioDeviceID-array-leak.patch: Add.


Canonical link: https://commits.webkit.org/201577@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232365 268f45cc-cd09-0410-ab3c-d52691b4dbfc